unpackaged/main/default/objects/ebotdata__BotDeploymentStatusTracker__c/ebotdata__BotDeploymentStatusTracker__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BotDeploymentStatusTracker</label>
</CustomObject>