unpackaged/main/default/objects/ebotdata__BotDeploymentStatusTracker__c/fields/ebotdata__Async_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Async_Job_Status__c</fullName>
    <label>Async Job Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>