unpackaged/main/default/objects/ebotdata__BotDeploymentStatusTracker__c/fields/ebotdata__Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Batch_Job_Id__c</fullName>
    <label>Batch Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>