unpackaged/main/default/objects/ebotdata__BotDeploymentStatusTracker__c/fields/ebotdata__Bot_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Bot_Name__c</fullName>
    <label>Bot Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>