unpackaged/main/default/objects/ebotdata__BotDeploymentStatusTracker__c/fields/ebotdata__Deploy_AsyncJob_Status__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Deploy_AsyncJob_Status__c</fullName>
    <label>Deploy_AsyncJob_Status(Not)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>