unpackaged/main/default/objects/ebotdata__BotDeploymentStatusTracker__c/fields/ebotdata__Deployment_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Deployment_Job_ID__c</fullName>
    <label>Deployment Job ID(Not)</label>
    <type>TextArea</type>
</CustomField>