unpackaged/main/default/objects/ebotdata__BotDeploymentStatusTracker__c/fields/ebotdata__Deployment_Status__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Deployment_Status__c</fullName>
    <label>Deployment Status(Not)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>