unpackaged/main/default/objects/ebotdata__BotDeploymentStatusTracker__c/fields/ebotdata__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Error_Message__c</fullName>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>