unpackaged/main/default/objects/ebotdata__BotDeploymentStatusTracker__c/fields/ebotdata__Process_Step_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Process_Step_Name__c</fullName>
    <label>Process Step Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>