unpackaged/main/default/objects/ebotdata__BotDeploymentStatusTracker__c/fields/ebotdata__Retrieve_AsyncJob_Status__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Retrieve_AsyncJob_Status__c</fullName>
    <label>Retrieve_AsyncJob_Status(Not)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>